Fix alignment

--- a/frontend/src/components/SearchResult/searchPage.css
+++ b/frontend/src/components/SearchResult/searchPage.css
@@ -7,6 +7,8 @@
 
 .searchPageWrapper h1 {
   margin: 15px;
+  justify-content: center;
+  align-items: center;
 }
 
 .searchCardsHolder {
